# silero-models

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE_CIS  README.md  changelog.md  colab_utils.py  examples.ipynb  examples_denoise.ipynb  examples_te.ipynb  examples_tts.ipynb  examples_tts_cis.ipynb  hubconf.py  models.yml  pyproject.toml  requirements.txt  setup.cfg  tts_examples.ipynb  tts_utils.py  utils.py  v5_cis_base_jit.ipynb
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions---help---support.md
.github/workflows/: build_deploy.yml
src/: __init__.py  silero.py
src/silero/: __init__.py  denoiser_utils.py  silero.py  tts_utils.py
tests/: README.md  requirements_test.txt
tests/files/: langs_val_100texts.csv  tts_speed_check_test_add_nostress.csv
