[metadata]
name = silero
version = 0.4.1
organization = Silero LLC
author = Silero Team
author_email = hello@silero.ai
description = Silero Models: pre-trained enterprise-grade STT / TTS models and benchmarks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snakers4/silero-models
project_urls =
    Bug Tracker = https://github.com/snakers4/silero-models/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    torch >= 1.10.0
    torchaudio >= 0.10.0
    omegaconf >= 2.1.0

[options.packages.find]
where = src
